rusqlite_migration/src/errors/snapshots/rusqdoltlite_migration__errors__tests__error_source_number_foreign_key_check.snap
---
source: rusqdoltlite_migration/src/errors/tests.rs
expression: e.source()
snapshot_kind: text
---
Some(
    ForeignKeyCheckError {
        table: "t1",
        rowid: 1,
        parent: "t2",
        fkid: 2,
    },
)
