rusqlite_migration/src/errors/snapshots/rusqdoltlite_migration__errors__tests__error_source_number_migration_definition.snap
---
source: rusqdoltlite_migration/src/errors/tests.rs
expression: e.source()
snapshot_kind: text
---
Some(
    NoMigrationsDefined,
)
