rusqlite_migration/src/errors/snapshots/rusqdoltlite_migration__errors__tests__error_source_number_specified_schema_version.snap
---
source: rusqdoltlite_migration/src/errors/tests.rs
expression: e.source()
snapshot_kind: text
---
Some(
    TargetVersionOutOfRange {
        specified: NoneSet,
        highest: NoneSet,
    },
)
